2005-12-20  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by eric, thatcher
        
        <rdar://problem/4172984> KWQExceptions needs to use @try/@catch instead of relying on NSException.h internals
        
        Needed to undef try/catch because of 4333439.  Moved the 
        declarations of variables that are returned from within a @try 
        block outside the @try block (because of "might be clobbered by 
        a longjmp or vfork" warnings).  Moved some return statements
        inside the @try block to fix volatilization errors with gcc4.

        * WebCore.xcodeproj/project.pbxproj:
        * WebCorePrefix.h:
        * kcanvas/device/quartz/KCanvasFilterQuartz.mm:
        (KCanvasFEBlendQuartz::getCIFilter):
        (KCanvasFEColorMatrixQuartz::getCIFilter):
        (KCanvasFECompositeQuartz::getCIFilter):
        (getPointLightVectors):
        (getLightVectors):
        (getNormalMap):
        (KCanvasFEDiffuseLightingQuartz::getCIFilter):
        (KCanvasFEFloodQuartz::getCIFilter):
        (KCanvasFEImageQuartz::getCIFilter):
        (KCanvasFEMergeQuartz::getCIFilter):
        (KCanvasFESpecularLightingQuartz::getCIFilter):
        * kwq/KWQExceptions.h:
        * kwq/KWQExceptions.mm:
        (KWQReportBlockedException):
        * kwq/KWQFileButton.mm:
        (KWQFileButton::sizeForCharacterWidth):
        (KWQFileButton::frameGeometry):
        * kwq/KWQKCursor.mm:
        (+[NSCursor _WebCore_cursorWithName:hotSpot:_WebCore_cursorWithName:hotSpot:]):
        * kwq/KWQKHTMLPart.mm:
        (KWQKHTMLPart::createPart):
        (KWQKHTMLPart::nextKeyView):
        (KWQKHTMLPart::runJavaScriptPrompt):
        (KWQKHTMLPart::keyEvent):
        (KWQKHTMLPart::sendContextMenuEvent):
        (KWQKHTMLPart::fileWrapperForElement):
        (KWQKHTMLPart::attributedString):
        (KWQKHTMLPart::imageFromRect):
        * kwq/KWQKHTMLPartBrowserExtension.mm:
        * kwq/KWQLineEdit.mm:
        (QLineEdit::sizeForCharacterWidth):